# unified-package-manager

./: .gitignore  Command.cpp  Command.hpp  LICENSE  PackageManager.cpp  PackageManager.hpp  README.md  config_reader.cpp  config_reader.hpp  main.cpp  meson.build  meson_options.txt
configs/: apt.scm  apt.toml  flatpak.scm  flatpak.toml
src/: Command.cpp  Command.hpp  PackageManager.cpp  PackageManager.hpp  common.cpp  common.hpp  config_reader.cpp  main.cpp
src/Authentication/: IAuth.hpp  polkitAuth.cpp  polkitAuth.hpp  stdAuth.cpp  stdAuth.hpp
src/Guile/: guile_functions.cpp  guile_functions.hpp  upm.scm  upm_script.h
src/guile/: guile_functions.cpp  upm.scm  upm_script.h
